--- a/Django/pagina/templates/pages/mesa.html
+++ b/Django/pagina/templates/pages/mesa.html
@@ -56,7 +56,7 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                <a class="btn btn-primary" href="/pagina/Compra.html" role="button">Comprar</a>
+                <a class="btn btn-primary" href="{% url "compra" %}" role="button">Comprar</a>
               </div>
             </div>
           </div>
